<resources>
    <string name="app_name">AppChatFB</string>
    <string name="tvemail">Email Address</string>
    <string name="email">Email</string>
    <string name="tvpass">Password</string>
    <string name="et_pass">Pass</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User name</string>
    <string name="email_adress">Email Adress</string>
    <string name="password">Password</string>
    <string name="singIN">Sing In</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
